--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,7 +1,47 @@
 header {
-    background-color: aqua;
+    background-color: wheat;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 1rem;
+    border-radius: 15px;
+    box-sizing: border-box;
 }
 
+.menu-header {
+    display: flex;
+    gap: 3rem;
+    /* supprimer flex-direction: right; (invalide) */
+    justify-content: flex-end;
+    /* pousse les items vers la droite */
+    align-items: center;
+    margin-right: 2rem;
+}
+
+.menu-header li {
+    list-style: none;
+
+}
+
+.menu-header a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
+
+/* FIN DU HEADER CSS */
+
+
 footer {
-    background-color: rgb(234, 27, 27);
+    background-color: rgb(211, 166, 75);
+}
+
+footer p {
+    text-align: center;
+    padding: 1rem;
+    margin: 0;
+
 }
